fix(webui): align add party button to right on mobile

--- a/webui/css/media_queries.scss
+++ b/webui/css/media_queries.scss
@@ -47,6 +47,10 @@ $desktop-width: 720px;
         width: 100vw;
         height: 100vh;
     }
+
+    #fab-container {
+        align-items: end
+    }
 }
 
 // }}}
